--- a/style.css
+++ b/style.css
@@ -79,7 +79,15 @@
   .info-section h1 {
     font-size: 4rem;
   }
+  .info-section h2 {
+    font-size: 2rem;
+
+  }
+
+  .info-section p {
+    font-size: medium;
+  }
   .info-section {
-  margin-top: 1rem !important;
-  } 
+    margin-top: 1rem !important;
+  }
 }
